--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
           <p>Social</p>
           <ul>
             <li>
-              <a href="https://github.com/Adham-XIII"
+              <a href="https://github.com/Adhamxiii"
                 ><i class="fa-brands fa-github"></i
               ></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/adham-nasser-xiii/"
+              <a href="https://www.linkedin.com/in/adhamnasser"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </li>
             <li>
-              <a href="mailto:adhamxiii10@gmail.com"
+              <a href="mailto:adhamxiii22@gmail.com"
                 ><i class="fa-solid fa-envelope"></i
               ></a>
             </li>
@@ -134,7 +134,7 @@
       <hr />
       <p class="copyright">
         © Krusty Krab 2023 . All rights reserved |
-        <a href="https://github.com/Adham-XIII">Adham Nasser</a>
+        <a href="https://github.com/Adhamxiii">Adham Nasser</a>
       </p>
     </footer>
 
